# db-queries

./: README.md  dune  dune-project  flake.nix  main.ml  queries.opam
_build/: .db  .digest-db  log
_build/default/: main.ml
_build/default/.main.eobjs/byte/: dune__exe__Main.cmi  dune__exe__Main.cmo  dune__exe__Main.cmt
_build/default/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/.merlin-conf/: exe-main
_build/default/lib/: computing.ml  lib.cmxa  lib.ml-gen  reading.ml
_build/default/lib/.lib.objs/: computing.ml.d  datatypes.ml.d  formatting.ml.d  lib__Reading.impl.all-deps  processing.ml.d  reading.ml.d
_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__Computing.cmi  lib__Computing.cmo  lib__Computing.cmt  lib__Datatypes.cmi  lib__Datatypes.cmo  lib__Datatypes.cmt  lib__Formatting.cmi  lib__Formatting.cmo  lib__Formatting.cmt  lib__Processing.cmi  lib__Processing.cmo  lib__Processing.cmt  lib__Reading.cmi  lib__Reading.cmo  lib__Reading.cmt
_build/default/lib/.lib.objs/native/: lib.cmx  lib__Computing.cmx  lib__Datatypes.cmx  lib__Formatting.cmx  lib__Processing.cmx  lib__Reading.cmx
_build/default/lib/.merlin-conf/: lib-lib
lib/: compute.ml  datatypes.ml  dune  format.ml  formatting.ml  process.ml  processing.ml  read.ml
